# PDF-Translator

./: .gitignore  .pre-commit-config.yaml  LICENSE  MANIFEST.in  Makefile  README.md  pyproject.toml
.github/workflows/: lint.yml  publish.yml  test.yml  typecheck.yml
pdf_translator/: __init__.py  cli.py
pdf_translator/core/: __init__.py  config.py  ocr.py  pdf_extractor.py  pdf_renderer.py  renderer.py  text_translator.py  translator.py
pdf_translator/utils/: __init__.py  fonts.py  page_range.py
tests/: conftest.py  test_cli.py
tests/core/: test_config.py  test_ocr.py  test_pdf_extractor.py  test_pdf_renderer.py  test_renderer.py  test_text_translator.py  test_translator.py
tests/utils/: test_fonts.py  test_page_range.py
