[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pdf-translator"
version = "0.1.0"
description = "Translate PDF documents using OCR and machine translation"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [
    {name = "Bhanu Pratap Singh Rathore"}
]
maintainers = [
    {name = "Bhanu Pratap Singh Rathore"}
]
keywords = [
    "pdf",
    "translation",
    "ocr",
    "surya",
    "google-translate",
    "document-translation",
    "hindi",
    "multilingual",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Text Processing :: Linguistic",
    "Topic :: Multimedia :: Graphics :: Graphics Conversion",
    "Topic :: Scientific/Engineering :: Image Recognition",
]

dependencies = [
    "numpy>=1.21.0",
    "Pillow>=9.0.0",
    "pdf2image>=1.16.0",
    "deep-translator>=1.11.0",
    "surya-ocr>=0.4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-mock>=3.10.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
    "pre-commit>=3.0.0",
    "build>=1.0.0",
    "twine>=4.0.0",
]

[project.scripts]
pdf-translator = "pdf_translator.cli:main"

[project.urls]
Homepage = "https://github.com/bhanurathore/pdf-translator"
Documentation = "https://github.com/bhanurathore/pdf-translator#readme"
Repository = "https://github.com/bhanurathore/pdf-translator"
Issues = "https://github.com/bhanurathore/pdf-translator/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["pdf_translator*"]

[tool.black]
line-length = 88
target-version = ["py39", "py310", "py311", "py312"]

[tool.ruff]
line-length = 88
target-version = "py39"

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
]
ignore = [
    "E501",   # line too long (handled by black)
    "B008",   # do not perform function calls in argument defaults
]

[tool.mypy]
python_version = "3.9"
warn_return_any = false
warn_unused_configs = true
disallow_untyped_defs = true
exclude = [".venv", "venv", "build", "dist"]
follow_imports = "skip"

[[tool.mypy.overrides]]
module = [
    "tests.*",
    "surya.*",
    "torch.*",
    "deep_translator.*",
    "pdf2image.*",
    "PIL.*",
    "numpy.*",
]
ignore_errors = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --cov=pdf_translator --cov-report=term-missing"
